--- a/R_C14_rates calculation/Chla_npp_2.0.Rmd
+++ b/R_C14_rates calculation/Chla_npp_2.0.Rmd
@@ -60,8 +60,26 @@ C14_hot_depth <- readxl::read_excel("data_used/TAN1810_14C-Pico_25052020_QA_1.2.
             depth = `DEPTH`)%>%
     distinct() %>%
   filter(!is.na(cycle))
-C14_hot$cycle <- as.character(C14_hot$cycle)
-C14_hot$exp <- as.character(C14_hot$exp)
+C14_hot_depth$cycle <- as.character(C14_hot_depth$cycle)
+C14_hot_depth$exp <- as.character(C14_hot_depth$exp)
+```
+
+## summary surface and DCM
+```{r}
+npp_sum <- full_join(npp, C14_hot_depth) %>%
+  filter(!(is.na(sample))) %>%
+  mutate(mean_NPP = case_when (is.na(mean_NPP) ~ 0.14045846, # value from depth at 30 m instead of 40 m
+                               TRUE ~ mean_NPP)) 
+summary <- npp_sum %>%
+  group_by(cycle_name) %>%
+  summarize(mean = round(mean(mean_NPP), 2)#,
+            # sd = round(sd(mean_NPP),2)
+            ) #%>%
+  unite("mean_sd", mean:sd, sep = " ± ") %>%
+  pivot_wider(names_from = "cycle_name", values_from = "mean_sd")
+# %>%
+  # arrange(factor(sample, levels = c('SUR', 'DCM')))
+summary
 ```
 
 # Chlorophyll data
@@ -101,6 +119,40 @@ chl$cycle <- as.character(chl$cycle)
 chl$CTD <- sub("^", "U", chl$CTD)
 chl$exp <- as.character(chl$exp)
 
+```
+#summary table
+```{r}
+chl_summary <- chl %>%
+  filter(time == "noon") %>%
+  filter(cycle_name_2 != "SA1-b") %>%
+  select(cycle_name, areal_chl) %>%
+  distinct() %>%
+  mutate(water_mass = recode(cycle_name, "SA1" = "SA",
+                             "SA2" = "SA",
+                             "SA3" = "SA",
+                             "ST1" = "ST",
+                             "ST2" = "ST"
+                             )) %>%
+  group_by(water_mass) %>%
+  summarise(mean = mean(areal_chl),
+            min = min(areal_chl),
+            max = max(areal_chl))
+chl_summary
+
+npp_summary <- npp %>%
+  select(cycle_name, areal_PP) %>%
+  distinct() %>%
+  mutate(water_mass = recode(cycle_name, "SA1" = "SA",
+                             "SA2" = "SA",
+                             "SA3" = "SA",
+                             "ST1" = "ST",
+                             "ST2" = "ST"
+                             )) %>%
+  group_by(water_mass) %>%
+  summarise(mean = mean(areal_PP,  na.rm=TRUE),
+            min = min(areal_PP,  na.rm=TRUE),
+            max = max(areal_PP,  na.rm=TRUE))
+npp_summary
 ```
 
 ## plot chla raw data- across depth for all individual ctd
@@ -170,13 +222,13 @@ p
 #list of integrated chla and max depth sampled. 
 depth <- chl %>%
   filter(time == "noon") %>%
-  filter(cycle_name_2 != "SA1-b") %>%
+  # filter(cycle_name_2 != "SA1-b") %>%
   group_by(cycle_name, exp, CTD) %>%
   count(CTD)
 
 check <- chl %>%
   filter(time == "noon") %>%
-  filter(cycle_name_2 != "SA1-b") %>%
+  # filter(cycle_name_2 != "SA1-b") %>%
   group_by(cycle_name, exp, CTD) %>%
   slice_tail() %>%
   select(CTD, cycle_name, exp, depth, areal_chl) %>%
@@ -186,7 +238,7 @@ check <- chl %>%
 # to add size fraction. calculate mean pct per cycle -> calculate mean int chla per cycle
 sf_mean <- chl %>%
   filter(time == "noon") %>%
-  filter(cycle_name_2 != "SA1-b") %>%
+  # filter(cycle_name_2 != "SA1-b") %>%
   group_by(cycle_name) %>%
   summarise("0.2" = mean(Chla_0.2_pct),
             "2" = mean(Chla_2_pct),
@@ -194,7 +246,7 @@ sf_mean <- chl %>%
   pivot_longer(cols = "0.2":"20", names_to = "size", values_to = "mean")
 sf_sd <- chl %>%
   filter(time == "noon") %>%
-  filter(cycle_name_2 != "SA1-b") %>%
+  # filter(cycle_name_2 != "SA1-b") %>%
   group_by(cycle_name) %>%
   summarise("0.2" = sd(Chla_0.2_pct),
             "2" = sd(Chla_2_pct),
@@ -205,7 +257,7 @@ sf_pct <- full_join(sf_mean, sf_sd)
 
 int_chl <- chl %>%
   filter(time == "noon") %>%
-  filter(cycle_name_2 != "SA1-b") %>%
+  # filter(cycle_name_2 != "SA1-b") %>%
   select(cycle_name, CTD, areal_chl) %>%
   distinct() %>%
   group_by(cycle_name) %>%
@@ -215,6 +267,14 @@ sf_chl <- full_join(sf_pct, int_chl) %>%
   mutate(sf_int = mean_int*mean/100) %>%
   mutate(size = fct_relevel(size, "20", "2", "0.2")) 
 
+sf_summary <- sf_chl %>%
+  filter(size == "0.2") %>%
+  select(sf_int, cycle_name, size) %>%
+  distinct() %>%
+  filter(cycle_name == "SA3") %>%
+  summarise(sf_int = mean(sf_int))
+sf_summary
+  
 ```
 
 
@@ -245,7 +305,7 @@ p2
 library(patchwork)
 plot <- p1/p2 +  plot_annotation(tag_levels = 'A')
 plot
-pdf("figures/2_NPP chla/20221129_int chla npp combine.pdf", height=7, width=4) ; plot(plot) ; dev.off()
+# pdf("figures/2_NPP chla/20221129_int chla npp combine.pdf", height=7, width=4) ; plot(plot) ; dev.off()
 
 
 # test - combine integrated chla and npp together on one graph
@@ -275,7 +335,7 @@ p <- sf_chl %>%
   ylab("Proportion of chla (%)") +
   theme(legend.position="top") 
 p
-pdf("figures/2_NPP chla/20221129_chla proportion.pdf", height=7, width=6) ; plot(p) ; dev.off()
+# pdf("figures/2_NPP chla/20221129_chla proportion.pdf", height=7, width=6) ; plot(p) ; dev.off()
 ```
 
 # chla and npp by depth
