--- a/R_C14_rates calculation/Rates_studies compare.Rmd
+++ b/R_C14_rates calculation/Rates_studies compare.Rmd
@@ -24,18 +24,43 @@ library(cowplot)
 
 #Colours for cycle
 ```{r}
-colours_water <- readxl::read_excel("colours_cycle.xlsx", sheet =  "Sheet3")
+colours_water <- readxl::read_excel("init_files/colours_cycle.xlsx", sheet =  "Sheet3")
 colours_water <- structure(colours_water$colour,.Names=colours_water$water)
 ```
 
 ```{r}
 
-studies <- readxl::read_excel("../data_used/C14_studies.xlsx", sheet = "Sheet4")  #updated one study
+studies <- readxl::read_excel("data_used/C14_studies.xlsx", sheet = "Sheet1")  #updated one study
 
-studies$Study <- factor(studies$Study, levels = c("Li 1994", "Jardilier 2010", "Grob 2011", "Hartman 2014", "Rii 2016",  "Duerschlag 2021","Irion 2021", "This study"))
-studies$Group<-factor(studies$Group, levels = c("Synechococcus", "Picoeukaryotes", "Nanoeukaryotes"))
+# studies$Study <- factor(studies$Study, levels = c("Li 1994", "Jardilier 2010", "Grob 2011", "Hartman 2014", "Rii 2016",  "Duerschlag 2021","Irion 2021", "This study"))
+studies$Group<-factor(studies$Group, levels = c("Synechococcus", "Pico 1", "Pico 2", "Nano"))
 studies$cat<-factor(studies$cat, levels = c("tropical", "ST", "SA", "antarctic"))
 
+
+p <- studies %>% 
+  ggplot(aes(fct_reorder(Study, Year), ymin = Lower, ymax = Upper, color = cat)) +
+  geom_linerange(position = position_dodge(width = 1), size = 2) +
+  facet_grid(.~ Group, scales = "free", space = "free") +
+   scale_y_continuous(trans='log10') +
+  annotation_logticks(sides = "l", 
+                      short = unit(0.07, "cm"),
+                      mid = unit(0.15, "cm"),
+                      long = unit(0.2, "cm"),
+                      size = 0.3) +
+  theme_classic()+
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5)) +
+  ylab(expression(Carbon~Fixation~Rate~(fgC~cell^-1~hr^-1))) +
+  xlab(NULL)+
+  theme(#strip.text.x = element_blank(),
+        panel.spacing.x = unit(0.5,"line")) +
+  scale_color_manual(values = colours_water, name = "Water mass") +
+  theme(legend.position="top")
+p
+pdf("figures/pp_rates_pico1_2.pdf", height=5, width=8) ; plot(p) ; dev.off()
+
+```
+
+```{r, eval=FALSE}
 #break up to two graphs, less than 30, more than 30 - ignore 
 blank <- studies %>%
   dplyr::select(Study, Group, cat)
@@ -87,28 +112,7 @@ prow <- plot_grid(
 prow
 pdf("figures/GRC/pp_rates_studies_2.pdf", height=4, width=6) ; plot(prow) ; dev.off()
 
-p <- studies %>% 
-  ggplot(aes(Study, ymin = Lower, ymax = Upper, color = cat)) +
-  geom_linerange(position = position_dodge(width = 1), size = 5) +
-  facet_grid(.~ Group, scales = "free", space = "free") +
-   scale_y_continuous(trans='log10') +
-  annotation_logticks(sides = "l", 
-                      short = unit(0.07, "cm"),
-                      mid = unit(0.15, "cm"),
-                      long = unit(0.2, "cm"),
-                      size = 0.3) +
-  theme_bw()+
-  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
-  ylab(expression(Primary~Production~(fgC~cell^-1~day^-1))) +
-  theme(strip.text.x = element_blank(),
-        panel.spacing.x = unit(0,"line")) +
-  scale_color_manual(values = colours_water, name = "Water mass") +
-  theme(legend.position="bottom")
-p
-pdf("figures/GRC/pp_rates_studies_3.pdf", height=4, width=6) ; plot(p) ; dev.off()
-
 ```
-
 
 ```{r, eval=FALSE}
 #ignore this
