--- a/R_C14_rates calculation/fsc_group rates.Rmd
+++ b/R_C14_rates calculation/fsc_group rates.Rmd
@@ -95,6 +95,53 @@ join_rates <- join_rates %>%
 
 ```
 
+# summary for paper - pp, npp, cell conc, growth rate
+```{r}
+summary <- join_rates %>%
+  select(population, cycle_name, depth_cat, pp, npp, conc_ml, growth_rate) %>%
+  pivot_longer(pp:growth_rate, names_to = "data", values_to = "value") %>%
+  group_by(data, population, cycle_name, depth_cat) %>%
+  summarize(mean = round(mean(value), 2),
+            median = round(median(value), 2),
+              IQR = round(IQR(value),2),
+            MAD = round(mad(value), 2),
+            sd = round(sd(value),2))
+            # n = n()
+            # ) %>%
+  #  # unite("mean_sd", mean:sd, sep = " ± ") %>%
+  # pivot_wider(names_from = "cycle_name", values_from = "mean_sd") %>%
+  # arrange(factor(data, levels = c('pp', 'npp', 'conc_ml', 'growth_rate'))) %>%
+  # select(data, population, ST1, ST2, SA1, SA2, SA3)
+summary
+
+
+summary <- join_rates %>%
+  select(population, cycle_name, pp, npp, conc_ml, growth_rate) %>%
+  pivot_longer(pp:growth_rate, names_to = "data", values_to = "value") %>%
+  group_by(data, population, cycle_name) %>%
+  summarize(mean = round(mean(value), 2),
+            sd = round(sd(value),2), 
+            # n = n()
+            ) %>%
+   unite("mean_sd", mean:sd, sep = " ± ") %>%
+  pivot_wider(names_from = "cycle_name", values_from = "mean_sd") %>%
+  arrange(factor(data, levels = c('pp', 'npp', 'conc_ml', 'growth_rate'))) %>%
+  select(data, population, ST1, ST2, SA1, SA2, SA3)
+summary
+
+
+writexl::write_xlsx(summary, path = "group_summary.xlsx")
+
+table <- readxl::read_xlsx("group_summary.xlsx",sheet = "Sheet2")
+library(xtable)
+print(xtable(table),
+      comment = FALSE,
+      include.rownames=FALSE
+      #,
+      #digits=-3
+      )
+```
+
 ## check subset data - diam.
 after subset, no difference between ST and SA. Before subset, ST>SA for pico and nano.
 for syn and pico, no difference in surface and DCM
@@ -477,6 +524,20 @@ p <- join_rates %>%
   facet_grid (.~cell_type,  scales ="free")
 
 p
+
+p <- join_rates %>%
+  filter(pop_fsc !="syn_SV") %>%
+  # filter(population != "Nano") %>%
+  mutate(cell_type = case_when(population == "Syn"  ~  "Cyano",
+                               population == "Pico" ~ "Euks",
+                               population  == "Nano" ~ "Euks")) %>%
+  ggplot(aes(x=vol, y=pp, shape = population)) +
+  geom_point() +geom_smooth() +
+  scale_x_continuous(trans='log10') + scale_y_continuous(trans='log10') + annotation_logticks(sides = "bl") +
+  facet_grid (.~cell_type,  scales ="free")
+
+p
+
 ```
 
 #Statistical tests
